# image_video_parser

./: .gitignore  README.md  environment.yaml  main.py  pyproject.toml  requirements.txt  run_this_shit.py  setup.sh
image_video_parser/: image_node_parser_workflow.py  object_detection_model.py  object_segmentation_model.py  owl_v2.py  utils.py
scripts/: install_script.py
src/: image_node_parser_workflow.py  object_detection_model.py  object_segmentation_model.py  setup.sh  utils.py
